--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -8,24 +8,24 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 ## <a id='about'></a>About collectd Add-on for PCF
 
 This add-on is required to enable the Altoros Heartbeat monitoring solution to consume system metrics
-from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) add-on gathers VM
+from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) Add-on gathers VM
 metrics from PCF platform components and any other BOSH-deployed services, such as databases,
 and makes this information available to Altoros Heartbeat over the network.
 
 ## <a id='prerequisites'></a>Prerequisites
 
-<p class="note"><strong>Note</strong>: collectd add-on for PCF does not work on Windows machines.</p>
+<p class="note"><strong>Note</strong>: collectd Add-on for PCF does not work on Windows machines.</p>
 
-To complete the collectd add-on installation:
+To complete the collectd Add-on installation:
 
 * You must be a PCF operator with admin rights.
   For more information, see [Understanding Pivotal Cloud Foundry User Types](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator).
 * You must have Pivotal Operations Manager (Ops Manager) v1.10 or later.
-* Ensure you have at least 128 MB of memory free on each VM before deploying collectd add-on. The collectd add-on uses 50 MB of memory.
+* Ensure you have at least 128 MB of memory free on each VM before deploying collectd Add-on. The collectd Add-on uses 50 MB of memory.
 
 ## <a id='manifest'></a>Creating a collectd Manifest
 
-A collectd manifest is a YML file that contains runtime configuration information for the collectd add-on.
+A collectd manifest is a YML file that contains runtime configuration information for the collectd Add-on.
 Follow the steps below to create a collectd manifest for your deployment:
 
 1. <a id='createmanifest'></a>Create a file named `collectd.yml`, starting with the code below as a template:
@@ -49,19 +49,19 @@ Follow the steps below to create a collectd manifest for your deployment:
 
 1. Replace the values listed in the template as follows:
 
-* `exclude: deployments`: (Optional) Specify the name of the deployment to mass exclude from the collectd add-on coverage.
+* `exclude: deployments`: (Optional) Specify the name of the deployment to mass exclude from the collectd Add-on coverage.
 
     <p class="note"><strong>Note:</strong> If this functionality is not required, remove this section.</p>
 
-* `releases: version`: Use the version of collectd downloaded from Pivotal Network
+* `releases: version`: Use the version of the collectd Add-on downloaded from Pivotal Network.
 * `collectd: graphite_prefix`: Do not change the graphite_prefix name. It must be `cf.collectd`.
 * `collectd: graphite_servers`: If you are using Heartbeat in high availability (HA) mode, use your load balancer endpoint for collectd. For details, see [External Load Balancer configuration](ha-with-external-lb.html#lb-config).
 If you are not going to use HA mode, use the IP address of any of Altoros Heartbeat's back-ends. For details, see [Finding Back-End IPs](ha-with-external-lb.html#finding-backend-ip).
-* `collectd: interval`: You can modify the 10 second default interval value. This value specifies how often the collectd add-on gathers metrics from VMs.
+* `collectd: interval`: You can modify the 10 second default interval value. This value specifies how often the collectd Add-on gathers metrics from VMs.
 
 ##<a id='deploy'></a> Downloading and Deploying the collectd Add-on
 
-1. Download the collectd add-on software binary from the [Pivotal Network](https://network.pivotal.io/products/altoros-heartbeat) to your local machine.
+1. Download the collectd Add-on software binary from the [Pivotal Network](https://network.pivotal.io/products/altoros-heartbeat) to your local machine.
 
 1. Copy the software binary to your Ops Manager VM.
 
@@ -96,7 +96,7 @@ If you are not going to use HA mode, use the IP address of any of Altoros Heartb
 
     <pre class="terminal">$ bosh releases</pre>
 
-1. Update your runtime configuration to include the collectd add-on.
+1. Update your runtime configuration to include the collectd Add-on.
 
     <p class="note"><strong>Note</strong>: If you installed other BOSH add-ons,
     you must merge the collectd manifest into your existing add-on manifest.
@@ -141,7 +141,7 @@ If you are not going to use HA mode, use the IP address of any of Altoros Heartb
 
 ## <a id='uninstall'></a>Uninstalling the collectd Add-on
 
-Follow the steps below to remove the collectd add-on from your existing runtime config and
+Follow the steps below to remove the collectd Add-on from your existing runtime config and
 roll back to a previous configuration:
 
 1. SSH into Ops Manager.
@@ -169,12 +169,15 @@ If you have no existing runtime configuration, follow the steps below:
     <pre class="terminal">$ cat empty-runtime.yml
     releases: []</pre>
 
-1. Update the runtime configuration with `empty-runtime.yml`.
+1. Update the runtime configuration with `empty-runtime.yml` file.
 
-    <pre class="terminal">$ bosh update runtime-config empty-runtime.yml</pre>
+    1. If you are using PCF v1.10, use the BOSH CLI v1 command:
+        <pre class="terminal">$ bosh update runtime-config empty-runtime.yml</pre>
+    1. If you are using PCF v1.11 or later, use the BOSH CLI v2 command:
+        <pre class="terminal">$ bosh2 -e my-env update-runtime-config empty-runtime.yml</pre>
 
 1. Navigate to your Installation Dashboard in Ops Manager.
 
 1. Click **Apply Changes**.
 
-The collectd add-on will be removed from your deployment.
+The collectd Add-on will be removed from your deployment.
