--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -31,7 +31,7 @@ Follow the steps below to create a collectd manifest for your deployment:
 1. <a id='createmanifest'></a>Create a file named `collectd.yml`, starting with the code below as a template:
   <pre>releases:
   \- name: collectd
-      <strong>version:</strong> 10.0.3
+      <strong>version:</strong> xx.x.x
   addons:
   \- name: collectd
       jobs:
@@ -65,31 +65,71 @@ If you are not going to use HA mode, use the IP address of any of Altoros Heartb
 
 1. Copy the software binary to your Ops Manager VM.
 
-    <pre class="terminal">$ scp -i PATH/TO/PRIVATE/KEY collectd-10.tgz ubuntu@YOUR-OPS-MANAGER-VM-IP:</pre>
+    <pre class="terminal">$ scp -i PATH/TO/PRIVATE/KEY collectd-xx.x.x.tgz ubuntu@YOUR-OPS-MANAGER-VM-IP:</pre>
 
 1. Copy the collectd manifest, `collectd.yml` file, to your Ops Manager instance.
 
     <pre class="terminal">$ scp -i PATH/TO/PRIVATE/KEY collectd.yml ubuntu@YOUR-OPS-MANAGER-VM-IP:</pre>
 
-1. SSH into Ops Manager.
+1. [SSH](https://docs.pivotal.io/pivotalcf/1-11/customizing/trouble-advanced.html#ssh) into Ops Manager.
 
     <pre class="terminal">$ ssh -i PATH-TO-PRIVATE-KEY ubuntu@YOUR-OPS-MANAGER-VM-IP</pre>
 
 1. On the Ops Manager VM, navigate to the software binary location.
 
-    <pre class="terminal">$ cd ~</pre>
+    <pre class="terminal">$ cd PATH-TO-BINARY</pre>
 
-1. On the Ops Manager VM, target the BOSH director instance.
+If you are using PCF v1.11 or later, follow the [BOSH CLI v2](#bosh-cli-v2) procedures to deploy the collectd Add-on.
 
-    <pre class="terminal">$ bosh target YOUR-OPS-MANAGER-DIRECTOR-IP
-    Target set to 'Ops Manager'
-    Your username: director
-    Enter password: ****
-    Logged in as 'director'</pre>
+If you are using PCF v1.10, follow the [BOSH CLI v1](#bosh-cli-v1) procedures to deploy the collectd Add-on.
+
+### <a id='bosh-cli-v2'></a>Deploy the collectd Add-on with the BOSH CLI v2
+
+1. On the Ops Manager VM, [log in to the BOSH Director](https://docs.pivotal.io/pivotalcf/1-11/customizing/trouble-advanced.html#bosh2-access).
+
+1. Upload your release, specifying the path to the tarballed collectd binary. For example:
+
+    <pre class="terminal">$ bosh2 -e my-env upload-release collectd-xx.x.x.tgz</pre>
+
+1. List the releases and confirm that collectd appears. For example:
+
+    <pre class="terminal">$ bosh2 -e my-env releases</pre>
+
+1. Update your runtime configuration to include the collectd Add-on, specifying the path to the `collectd.yml` file you created above. For example:
+
+    <p class="note"><strong>Note</strong>: If you installed other BOSH add-ons,
+    you must merge the collectd manifest into your existing add-on manifest.
+    Append the contents of <code>collectd.yml</code> to your existing add-on YML file.</p>
+
+    <pre class="terminal">$ bosh2 -e my-env update-runtime-config collectd.yml</pre>
+
+1. Verify your runtime configuration changes match what you specified in the collectd manifest. For example:
+
+    <pre class="terminal">
+    $ bosh2 -e my-env runtime-config
+    releases:
+    <span>-</span> name: collectd
+      version: xx.x.x
+
+    addons:
+    <span>-</span> name: collectd
+      jobs:
+      <span>-</span> name: collectd
+        release: collectd
+    ...
+    </pre>
+
+1. Navigate to your Installation Dashboard in Ops Manager.
+
+1. Click **Apply Changes**.
+
+### <a id='bosh-cli-v1'></a>Deploy the collectd Add-on with the BOSH CLI v1
+
+1. On the Ops Manager VM, [log in to the BOSH Director](https://docs.pivotal.io/pivotalcf/1-11/customizing/trouble-advanced.html#bosh1-access).
 
 1. Upload the release.
 
-    <pre class="terminal">$ bosh upload release ~/BINARY-NAME.tgz</pre>
+    <pre class="terminal">$ bosh upload release collectd-xx.x.x.tgz</pre>
 
 1. From the command line, confirm that the upload of the collectd software binary completed.
    You should see the collectd release.
@@ -102,22 +142,24 @@ If you are not going to use HA mode, use the IP address of any of Altoros Heartb
     you must merge the collectd manifest into your existing add-on manifest.
     Append the contents of <code>collectd.yml</code> to your existing add-on YML file.</p>
 
-    <pre class="terminal">$ bosh update runtime-config PATH/YOUR-ADD-ON-YML.yml</pre>
+    <pre class="terminal">$ bosh update runtime-config collectd.yml</pre>
 
 1. Verify your runtime configuration changes match what you specified in the collectd manifest.
 
-    ```
+    <pre class="terminal">
     $ bosh runtime-config
-    Acting as user 'admin' on 'micro'
+    Acting as user 'director' on 'p-bosh'
     releases:
-    - name: collectd
-      version: 10.0.3
+    <span>-</span> name: collectd
+      version: xx.x.x
+
     addons:
-    - name: collectd
+    <span>-</span> name: collectd
       jobs:
-      - name: collectd
+      <span>-</span> name: collectd
         release: collectd
-    ```
+    ...
+    </pre>
 
 1. Navigate to your Installation Dashboard in Ops Manager.
 
@@ -144,19 +186,25 @@ If you are not going to use HA mode, use the IP address of any of Altoros Heartb
 Follow the steps below to remove the collectd Add-on from your existing runtime config and
 roll back to a previous configuration:
 
-1. SSH into Ops Manager.
+1. [SSH](https://docs.pivotal.io/pivotalcf/1-11/customizing/trouble-advanced.html#ssh) into Ops Manager.
 
     <pre class="terminal">$ ssh -i PATH-TO-PRIVATE-KEY ubuntu@YOUR-OPS-MANAGER-VM-IP</pre>
 
 1. On the Ops Manager VM, retrieve the latest runtime configuration saved on the BOSH Director.
 
-    <pre class="terminal">$ bosh runtime-config > PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
+    1. If you are using PCF v1.10, use the BOSH CLI v1 command:
+        <pre class="terminal">$ bosh runtime-config > PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
+    1. If you are using PCF v1.11 or later, use the BOSH CLI v2 command:
+        <pre class="terminal">$ bosh2 -e my-env runtime-config > PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
 
-1. Remove the lines added at [step 1](#createmanifest) of [Creating a collectd Manifest](#manifest).
+1. From the retrieved file, delete the lines that were added at the [Create a collectd Manifest](#manifest) step.
 
 1. Update the runtime configuration.
 
-    <pre class="terminal">$ bosh update runtime-config PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
+    1. If you are using PCF v1.10, use the BOSH CLI v1 command:
+        <pre class="terminal">$ bosh update runtime-config PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
+    1. If you are using PCF v1.11 or later, use the BOSH CLI v2 command:
+        <pre class="terminal">$ bosh2 -e my-env update-runtime-config PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
 
 1. Navigate to your Installation Dashboard in Ops Manager.
 
