--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -105,7 +105,7 @@ Altoros Heartbeat for PCF has the following requirements:
 * [Elastic Runtime](https://network.pivotal.io/products/elastic-runtime) v1.10.x, v1.11.x
 * [Ops Manager](https://network.pivotal.io/products/ops-manager) v1.10.x, v1.11.x
 * Installation of the collectd add-on for PCF to enable PCF component VMs and
-  the VMs of any other BOSH-deployed services expose system metrics to Heartbeat.
+  the VMs of any other BOSH-deployed services expose component metrics to Heartbeat.
 For more information, see [Installing collectd Add-on for PCF](installing.html).
 * (Optional) If you want to enable collection of JMX metrics from Java apps, you will need a custom Java buildpack for Altoros Heartbeat for PCF.
 For more information, see [JMXTrans Agent Integration](jmxtrans.html).
