--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -5,31 +5,31 @@ owner: Partners
 
 This topic describes how to use dashboards for third-party services.
 
-##<a id='mysql'></a>MySQL
+## <a id='mysql'></a> MySQL
 
 <%= image_tag("images/mysql-dashboard-header.png") %>
 
 1. To track metrics from internal MySQL databases used by PCF Elastic Runtime:
-    1. Open the **Service - MySQL \*** dashboards,
-    1. Select `cf-*` from the **Deployment** drop-down menu,
+    1. Open the **Service - MySQL \*** dashboards.
+    1. Select `cf-*` from the **Deployment** drop-down menu.
     1. Select `mysql` from the **Host** drop-down menu.
 
 1. To track metrics from external MySQL databases used by PCF Elastic Runtime:
-    1. Open the **Service - MySQL \*** dashboards,
-    1. Select `cf-*` from the **Deployment** drop-down menu,
+    1. Open the **Service - MySQL \*** dashboards.
+    1. Select `cf-*` from the **Deployment** drop-down menu.
     1. Select `cloud_controller` from the **Host** drop-down menu.
 
 1. To track metrics from the MySQL for PCF tile:
-    1. Open the **Service - MySQL \*** dashboards,
-    1. Select `p-mysql-*` from the **Deployment** drop-down menu,
+    1. Open the **Service - MySQL \*** dashboards.
+    1. Select `p-mysql-*` from the **Deployment** drop-down menu.
     1. Select `mysql` from the **Host** drop-down menu.
 
 1. To track metrics from an external MySQL installation:
-    1. Open the **Service - Mysql \*** dashboards,
-    1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu,
+    1. Open the **Service - Mysql \*** dashboards.
+    1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `external-collectd` from the **Host** drop-down menu.
 
-##<a id='postgresql'></a>PostgreSQL
+## <a id='postgresql'></a> PostgreSQL
 
 <%= image_tag("images/postgresql-dashboard-header.png") %>
 
@@ -48,7 +48,7 @@ This topic describes how to use dashboards for third-party services.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `name of your PostgreSQL host` from the **Host** drop-down menu.
 
-##<a id='rabbitmq'></a>RabbitMQ
+## <a id='rabbitmq'></a> RabbitMQ
 
 <%= image_tag("images/rabbitmq-dashboard-header.png") %>
 
@@ -62,7 +62,7 @@ This topic describes how to use dashboards for third-party services.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `external-collectd` from the Host drop-down menu.
 
-##<a id='redis'></a>Redis
+## <a id='redis'></a> Redis
 
 <%= image_tag("images/redis-dashboard-header.png") %>
 
@@ -76,9 +76,9 @@ This topic describes how to use dashboards for third-party services.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `name of your Redis host` from the **Host** drop-down menu.
 
-##<a id='elasticsearch'></a>Elasticsearch
+## <a id='elasticsearch'></a> Elasticsearch
 
-<p class="note"><strong>Note</strong>: Index stats are sent only from the active master.
+<p class="note"><strong>Note:</strong> Index stats are sent only from the active master.
    If you need different configuration, <a href="index.html#feedback">contact Altoros</a>.</p>
 
 <%= image_tag("images/elasticsearch-dashboard-header.png") %>
@@ -88,7 +88,7 @@ This topic describes how to use dashboards for third-party services.
     1. Select `logsearch-*` from the **Deployment** drop-down menu.
     1. Select `elasticsearch_data` or `cluster_monitor` from the **Host** drop-down menu.
 
-##<a id='mongodb'></a>MongoDB
+## <a id='mongodb'></a> MongoDB
 
 <%= image_tag("images/mongodb-dashboard-header.png") %>
 
@@ -97,7 +97,7 @@ This topic describes how to use dashboards for third-party services.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `external-collectd` from the **Host** drop-down menu.
 
-##<a id='memcached'></a>Memcached
+## <a id='memcached'></a> Memcached
 
 <%= image_tag("images/memcached-dashboard-header.png") %>
 
@@ -106,28 +106,26 @@ This topic describes how to use dashboards for third-party services.
     1. Select `altoros-heartbeat-*` from the **Deployment** drop-down menu.
     1. Select `name of your Memcached host` from the **Host** drop-down menu.
 
-##<a id='concourse'></a>Concourse
+## <a id='concourse'></a> Concourse
 
-Configure Concourse web worker (aka [ATC](https://github.com/concourse/atc)) to transfer metrics to Altoros Heartbeat. To do this:
+To configure Concourse Web Worker (also called [Air Traffic Control (ATC)](https://github.com/concourse/atc)) to transfer metrics to Altoros Heartbeat, do the following:
 
 1. Find the IP address of the Collectd virtual machine that is used to monitor external services:
     1. From the Altoros Heartbeat for PCF tile, select the **Status** tab.
     1. Scroll down to **Collectd VM to monitor external services** and copy the IP address in the **IPS** column.
-
     <%= image_tag("images/external-services-vm.png") %>
 
 1. Run Concourse web worker (aka ATC) using the following CLI parameters or environment variables:
     1. `--riemann-host=<COLLECTD-VM-IP-ADDRESS>` or `CONCOURSE_RIEMANN_HOST=<COLLECTD-VM-IP-ADDRESS>`. Use the IP address copied in the previous step.
     1. `--metrics-host-name=<CONCOURSE-WEB-WORKER-NAME>` or `CONCOURSE_METRICS_HOST_NAME=<CONCOURSE-WEB-WORKER-NAME>`. Set a name starting with `web`, for example `web-0`. This name is used to find metrics in the dashboard.
-
-<%= image_tag("images/external-concourse-grafana-header.png") %>
+   <%= image_tag("images/external-concourse-grafana-header.png") %>
 
 1. To track metrics from an external Concourse installation:
     1. Open the **Service - External Concourse Overview** dashboard.
     1. From the **Deployment** drop-down menu, select `altoros-heartbeat-*`.
     1. From the **Web Host** drop-down menu, select the name of the host configured above.
 
-##<a id='haproxy'></a>HAProxy
+## <a id='haproxy'></a> HAProxy
 
 <%= image_tag("images/haproxy-grafana-header.png") %>
 
